--- a/angular-essentials/src/app/components/tasks/tasks.html
+++ b/angular-essentials/src/app/components/tasks/tasks.html
@@ -1,1 +1,19 @@
-<h2>{{ name }}</h2>
+@if (showAddModal) {
+  <app-new-task (closeDialog)="closeDialog()" />
+}
+<section id="tasks">
+  <header>
+    <h2>{{ name }}'s Tasks</h2>
+    <menu>
+      <button (click)="onClickAdd()">Add Task</button>
+    </menu>
+  </header>
+
+  <ul>
+    @for (task of selectedUserTasks; track task.id) {
+      <li>
+        <app-task [taskData]="task" (complete)="handleCompleteTask($event)" />
+      </li>
+    }
+  </ul>
+</section>
