--- a/angular-essentials/src/app/tasks/tasks.html
+++ b/angular-essentials/src/app/tasks/tasks.html
@@ -1,5 +1,5 @@
 @if (showAddModal) {
-  <app-new-task (closeDialog)="closeDialog()" />
+  <app-new-task (closeDialog)="closeDialog()" [id]="id!"/>
 }
 <section id="tasks">
   <header>
@@ -12,7 +12,7 @@
   <ul>
     @for (task of selectedUserTasks; track task.id) {
       <li>
-        <app-task [taskData]="task" (complete)="handleCompleteTask($event)" />
+        <app-task [taskData]="task" />
       </li>
     }
   </ul>
