--- a/angular-essentials/src/app/user/user.html
+++ b/angular-essentials/src/app/user/user.html
@@ -1,4 +1,4 @@
-<div>
+<app-card>
   <button [class.active]="selected" (click)="onSelectUser()">
     <img
       [attr.src]="imagePath()"
@@ -6,4 +6,4 @@
     >
     <span>{{ name }}</span>
   </button>
-</div>
+</app-card>
