--- a/investment-section-4/src/app/app.html
+++ b/investment-section-4/src/app/app.html
@@ -1,3 +1,3 @@
 <app-header />
-<app-user-input (calculate)="calculateInvestmentResults($event)" />
-<app-investment-result [results]="resultsData" />
+<app-user-input  />
+<app-investment-result />
